CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(MayaLand)

SET(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake/modules")

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLUT REQUIRED)
FIND_PACKAGE(SFML REQUIRED Graphics Window System)

FILE(GLOB_RECURSE source_files src/*.cpp)
ADD_EXECUTABLE(MayaLand ${source_files})
TARGET_LINK_LIBRARIES(MayaLand ${SFML_LIBRARY} ${GLUT_LIBRARY} ${OPENGL_LIBRARY})

